<resources>
    <string name="map_key" translatable="false">AIzaSyBDiYQMQ2K7-tkBwtNq9bRFBHPN_zRynbU</string>
    <string name="app_name">PayKeeper FYP</string>
    <string name="logo_name">PayKeeper</string>
    <string name="app_creator">Created By Hina and Ayesha</string>
    <string name="retailer_heading">Grow Your Business</string>
    <string name="retailer_tagline">We will help you to manage your Customers</string>
    <string name="login_btnText">Login</string>
    <string name="signup_btnText">Sign Up</string>
    <string name="how_we_work">How we work?</string>
    <string name="phone_number">Enter Your Phone No.</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="remember_me">Remember Me?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_new_account">Not a user? Create New One</string>
    <string name="Create_account">Create New Account (1/3)</string>
    <string name="Create_account_two">Create New Account (2/3)</string>
    <string name="Create_account_three">Create New Account (3/3)</string>
    <string name="full_name">Enter Your Full Name</string>
    <string name="enter_user_email">Enter Your Email</string>
    <string name="next_page">Next</string>
    <string name="otp_code_text">CODE</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">One-Time Password is sent to</string>
    <string name="otp_sent_to_number" />
    <string name="account_created_success">Account Created Successfully</string>
    <string name="account_created_success_details">Congraturlations Now You are connected with us!</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_details">Your Identity has been Verified, please enter your new Password</string>
    <string name="enter_new_password">Enter You New Password</string>
    <string name="enter_confirm_password">Confirm Your New Password</string>
    <string name="newPassword_btnText">Update Password</string>
    <string name="password_updated_details">Your Password is Updated Successfully!</string>
    <string name="password_updated">Password Updated</string>
    <string name="hint_text">"Choose Our Registered Company "</string>
    <string name="enter_your_bName">Enter Your Business Name</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search_text">Search Product</string>
    <string name="dashboard_title">Discover Your Product</string>
    <string name="featured_products">Our Featured Products</string>
    <string name="featured_products_description">Most Demanded Products!</string>
    <string name="our_product">Our Products</string>
    <string name="view_all">View All</string>
    <string name="Our_Products">Products</string>
    <string name="categories_product">Category</string>
    <string name="new_product_desc">Product Description</string>
    <string name="new_product_price">Price</string>
    <string name="dashboard_title_retailer">Admin Dashboard</string>
    <string name="most_viewed_product">Products</string>
    <string name="dashboard_title_add_product">Add New Product</string>
    <string name="new_product_name">Product Name</string>
    <string name="new_product_category">Product Category</string>
    <string name="new_product_qty">Qty.</string>
    <string name="add_new_product">Add Product</string>
    <string name="setting_update">Update</string>
    <string name="change_profile_image">Change Your Profile</string>
    <string name="full_email">Enter Email Address</string>
    <string name="homedashboardstatusbar">Account Summary</string>
    <string name="nav_home">Home</string>
    <string name="nav_customer">Customers</string>
    <string name="nav_transaction">Transactions</string>
    <string name="selectcustomerdashboardheading">Add New Customer</string>
    <string name="selectcustomerdashboardparagraph1">All Customers</string>
    <string name="editbutton">Save</string>
    <string name="formdashboardheading">+92-0123456789</string>
    <string name="homedashboardparagraph1">Net Balance</string>
    <string name="transactionamountcredit">+10000</string>
    <string name="debitbalancetext">Debit</string>
    <string name="creditbalancetext">Credit</string>
    <string name="homedashboardparagraph2">Till Last Transaction</string>
    <string name="homedashboardparagraph3">All Transactions</string>
    <string name="homedashboardparagraph4">See All</string>
    <string name="customername">Hina Shoukat</string>
    <string name="customerphonenumber">+92-123456789</string>
    <string name="transactiondate">24 July 2020 10:00 AM</string>

    /* Transaction List Dashboard */

    <string name="transactionlistdashboardstatusbar">Transaction List</string>
    <string-array name="numbers">
        <item>All Transactions </item>
        <item>Credit Transactions</item>
        <item>Debit Transactions</item>
    </string-array>

    /* transaction_chat */

    <string name="debitbutton">You Gave</string>
    <string name="creditbutton">You Got</string>
    <string name="selectcustomerdashboardstatusbar">Our Customers</string>
    <string name="registrationheading">Enter Your Phone Number</string>
    <string name="registrationparagraph1">This number can be same as logged in number!</string>
    <string name="registrationparagraph3">Already Have an Account?</string>
    <string name="registrationredirecttologin">Login</string>
    <string name="address">Business Address</string>
    <string name="transaction_details">Pay For Bill</string>
    <string name="transactionamountdebit">-10000</string>
    <string name="product_detail">Product Details</string>


</resources>