<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".CommonCredential.SetNewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:scaleType="centerInside"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/newpassanim" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_extrabold"
                android:gravity="center"
                android:text="@string/new_credentials"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp" />


            <TextView
                android:id="@+id/new_pass_detail"
                android:layout_width="match_parent"
                android:layout_below="@+id/new_pass_title"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/new_credentials_details"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_new_user_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_pass_detail"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_new_password"
                app:boxBackgroundColor="#00000000"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_new_user_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_new_user_password"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_confirm_password"
                app:boxBackgroundColor="#00000000"
                app:boxStrokeWidth="1dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/set_new_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_new_user_confirm_password"
                android:layout_marginTop="25dp"
                android:background="@color/black"
                android:fontFamily="@font/opensans_regular"
                android:onClick="setNewPasswordBtn"
                android:text="@string/newPassword_btnText"
                android:textColor="#fafafa"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/progress_bar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@drawable/white_circle"
                android:elevation="8dp"
                android:visibility="invisible"
                android:layout_centerInParent="true">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:outlineSpotShadowColor="@color/black" />

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>


</ScrollView>