<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".IntroductoryScreen.introductoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loginanim" />

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lottie"
            android:layout_gravity="center"
            android:fontFamily="@font/open_extrabold"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/welcome_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_title"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/retailer_tagline"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/welcome_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_desc"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:fontFamily="@font/proxima_nova"
                android:text="@string/login_btnText"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:transitionName="transition_login" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:fontFamily="@font/proxima_nova"
                android:text="@string/signup_btnText"
                android:textColor="@color/grey"
                android:textSize="18sp" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_title"
            android:layout_centerHorizontal="true"
            android:background="#BB000000"
            android:elevation="8dp"
            android:padding="20dp"
            android:visibility="invisible">

            <RelativeLayout
                android:id="@+id/pbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/white_circle"
                android:elevation="8dp"
                android:padding="14dp"
                android:visibility="visible">

                <ProgressBar
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:outlineSpotShadowColor="@color/black" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pbar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_extrabold"
                android:text="Logging in"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>